content overflow fix

--- a/static/css/layout.css
+++ b/static/css/layout.css
@@ -24,7 +24,7 @@ body{
 
     /* 
        The numbers here can get finicky,
-       best use standard numbers.
+       best use standard numbers. i.e NOT 0.235
     */
     grid-template-columns: 0.5fr 2fr 2fr 0.5fr;
     grid-template-rows: 0.2fr 2fr 2fr 0.2fr;
@@ -102,6 +102,8 @@ nav > ul > a:hover{
 /* MAIN TAG */
 main{
     grid-area: main;
+    overflow: scroll;
+    overflow-x: hidden;
     background-color: var(--main-color-darker);
 }
 
@@ -109,7 +111,7 @@ main{
     grid-area: sb;
 }
 
-/* anchor tags */
+/* anchor tags a.k.a links */
 a{
     text-decoration: none;
     color: white;
@@ -119,8 +121,11 @@ a{
 footer{
     grid-area: ft;
     margin: 0%;
+    box-sizing: content-box;
 }
 
 footer > *{
     margin: inherit;
+    width: 100%;
+    height: 100%;
 }
